--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,3 +1,12 @@
 body{
-	background-color: lightblue;
+	background-color: black;
+	margin: 0;
+	padding: 0;
+}
+
+svg{
+	height: 100vh;
+	width: 100%;
+	position: fixed;
+	top: 0;
 }
